--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ numpy==1.14.2
 pyhdf==0.9.0
 matplotlib==2.2.2
 h5py==2.8.0
-satpy==0+unknown
+satpy==0.11.1
 tqdm==4.28.1
 pandas==0.23.4
 tensorflow==1.11.0
