--- a/environment.yml
+++ b/environment.yml
@@ -11,9 +11,9 @@ dependencies:
   - pyhdf=0.9.0
   - python=3.6
   - requests=2.20.0
-  - satpy=0.11.1
   - tqdm=4.28.1
   - pip:
     - scikit_learn==0.20.2
     - tensorflow==1.12.0
     - tflearn==0.3.2
+    - git+https://github.com/trz228/satpy
