--- a/environment.yml
+++ b/environment.yml
@@ -15,5 +15,5 @@ dependencies:
   - pip:
     - scikit_learn==0.20.2
     - tensorflow==1.12.0
-    - git+https://github.com/trz228/tflearn
-    - git+https://github.com/trz228/satpy
+    - git+https://github.com/trz228/tflearn.git
+    - git+https://github.com/trz228/satpy.git
