--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,7 @@ dependencies:
   - python=3.6
   - requests=2.20.0
   - tqdm=4.28.1
+  - ordered-set=3.1.1
   - pip:
     - scikit_learn==0.20.2
     - tensorflow==1.12.0
